CSE: flush hashmap after any store.

--- a/Tests/CSE/CMakeLists.txt
+++ b/Tests/CSE/CMakeLists.txt
@@ -2,3 +2,4 @@ test_pass(CSE-test-noeffect1 MyPass -my-cse noeffect1)
 test_pass(CSE-test-eli-loads1 MyPass -my-cse eli-loads1)
 test_pass(CSE-test-eli-adds1 MyPass -my-cse eli-adds1)
 test_pass(CSE-test-eli-adds2 MyPass -my-cse eli-adds2)
+test_pass(CSE-test-eli-adds3 MyPass -my-cse eli-adds3)
